# chatnge_AI

./: .gitignore  README.md  pyproject.toml
Projects/: chatbot.py  config.py  emotion_classifier.py  logging_utils.py  main.py
chat/: chatbot.ipynb  database.ipynb
chat/data/: data.ipynb  emotion_data.ipynb  neutral_conversations_9000.csv
chat/data/output_data/: 최종본.csv
chat/prompts/: ambivalent_empathy.yaml  basic_system.yaml  direct_empathy.yaml  emcprompt.yaml  emcprompt_2.yaml  exploratory_empathy.yaml  general_conversation.yaml  mixed_validation.yaml
test/: chatbot.ipynb
