[tool.poetry]
name = "chatnge-ai"
version = "0.1.0"
description = "상담챗봇 개발"
authors = ["eunv0110 <eunvv0110@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
